<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/About_title"
        android:textSize="30dp"
        android:textColor="@color/colorAccent"/>
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/About_content"
        android:textSize="25dp"/>
    <Button
        style="@style/MyButton"
        android:id="@+id/btn_OK_About"
        android:layout_width="100dip"
        android:layout_height="50dip"
        android:textColor="@color/colorGray"
        android:text="@string/btn_OK"/>
</LinearLayout>
